@@ -1879,4 +1879,17 @@ function TODO($msg) { echo "TODO: ".$msg.BR; }  // DEBUG INFO!!!
 	{
 		return ($timestamp==0)?S_NEVER:date($format,$timestamp);
 	}
+
+	function	encode_log($data)
+	{
+		if(defined('ZBX_LOG_ENCODING_DEFAULT') && function_exists('mb_convert_encoding'))
+		{
+			$new=mb_convert_encoding($data, S_HTML_CHARSET, ZBX_LOG_ENCODING_DEFAULT);
+		}
+		else
+		{
+			$new = $data;
+		}
+		return $new;
+	}
 ?>
